--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <canvas id="canvas" width="400" height="400"></canvas>
     </body>
 
+    <script src="DirectAI.js"></script>
+
     <script src="HTML.js"></script>
     <script src="snake.js"></script>
 
