Added HTML link to github page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         </form>
         
         <canvas id="canvas" width="400" height="400"></canvas>
+
+        <br>
+        <br>
+        <br>
+
+        <a href="https://github.com/zcareyltu/Snake-Q-learning">Github Page</a>
     </body>
 
     <script src="DirectAI.js"></script>
