Slloooooww ham cycle

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <select name="aiType" id="aiType">
                 <option value = "manual" selected>Manual</option>
                 <option value = "direct">Direct</option>
+                <option value = "hamiltonian">Hamiltonian Cycle</option>
             </select>
             <br>
 
@@ -51,6 +52,7 @@
     </body>
 
     <script src="DirectAI.js"></script>
+    <script src="HamiltonianCycleAI.js"></script>
 
     <script src="HTML.js"></script>
     <script src="snake.js"></script>
